--- a/src/DevIO.App/DevIO.App.csproj
+++ b/src/DevIO.App/DevIO.App.csproj
@@ -8,7 +8,9 @@
 
 
   <ItemGroup>
+    <PackageReference Include="autoMapper.extensions.microsoft.dependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" />
   </ItemGroup>
 
 
